modules/network/main.tf
### VPC Creation 
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge(
    { Name = "${terraform.workspace}-vpc" },
    var.tags
  )
}

### Public Subnets for Internet-facing components (ALB)
resource "aws_subnet" "public" {
  count                   = length(var.availability_zones)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, count.index)
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = merge(
    { Name = "${terraform.workspace}-public-${count.index}" },
    var.tags
  )
}

### Private Subnets for Compute (EC2)
resource "aws_subnet" "private" {
  count             = length(var.availability_zones)
  vpc_id            = aws_vpc.main.id
  cidr_block        = cidrsubnet(var.vpc_cidr, 8, count.index + 100)
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = false

  tags = merge(
    { Name = "${terraform.workspace}-private-${count.index}" },
    var.tags
  )
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags   = merge(
    { Name = "${terraform.workspace}-igw" },
    var.tags
  )
}

resource "aws_eip" "nat" {
  domain = "vpc"
  tags = merge(
    { Name = "${terraform.workspace}-nat" },
    var.tags
  )
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id # Placed in public subnet 
  tags          = merge(
    { Name = "${terraform.workspace}-ngw" },
    var.tags
  )
}

### Routing Separation
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = merge(
    { Name = "${terraform.workspace}-public-rtb" },
    var.tags
  )
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }
  tags = merge(
    { Name = "${terraform.workspace}-private-rtb" },
    var.tags
  )
}

### Route Table Associations
resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count          = length(aws_subnet.private)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
